--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,19 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+<!-- github pages hack -->
+  <script>
+    (function() {
+      var sessionStorage = sessionStorage || {};
+      var redirect = sessionStorage.redirect;
+
+      delete sessionStorage.redirect;
+      if (redirect && redirect != location.href) {
+        history.replaceState(null, null, redirect);
+      }
+    })();
+  </script>
+
   <app-root></app-root>
 </body>
 </html>
