More 404 hack tests

--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
       sessionStorage.redirect = location.href;
     </script>
 
-  <meta http-equiv="refresh" content="0;URL='/'"
+  <meta http-equiv="refresh" content="0;URL='/'">
 </head>
 <body>
   <!-- github pages hack, source: https://shermandigital.com/blog/fix-404-errors-from-angular-projects-hosted-on-github-pages/ -->
