--- a/404.html
+++ b/404.html
@@ -5,9 +5,10 @@
     <title>Product configurator</title>
     <script>
       sessionStorage.redirect = location.href;
+      console.log("href: ", location.href);
     </script>
 
-  <meta http-equiv="refresh" content="0;URL='/generic-3Dproduct-viewer/build'">
+<!--  <meta http-equiv="refresh" content="0;URL='/generic-3Dproduct-viewer/build'">-->
 </head>
 <body>
   <!-- github pages hack, source: https://shermandigital.com/blog/fix-404-errors-from-angular-projects-hosted-on-github-pages/ -->
