--- a/404.html
+++ b/404.html
@@ -1,20 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Product configurator</title>
-    <script>
-      sessionStorage.redirect = location.href;
-    </script>
-
-  <meta http-equiv="refresh" content="0;URL='/generic-3Dproduct-viewer/build'">
-</head>
+  <meta charset="utf-8">
+  <title>ProductConfigurator</title>
+  <base href="/generic-3Dproduct-viewer/build/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+<link rel="stylesheet" href="/styles.e6fe8d605ac6398faee7.css"></head>
 <body>
-  <!-- github pages hack, source: https://shermandigital.com/blog/fix-404-errors-from-angular-projects-hosted-on-github-pages/ -->
-  <!-- IE required at least 512 bytes of data to show non-default 404. -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</body>
+  <app-root></app-root>
+<script src="/runtime.1720a40670866f12654e.js" defer></script><script src="/polyfills-es5.045f36a1b489f87726f5.js" nomodule defer></script><script src="/polyfills.4df563810b04665727df.js" defer></script><script src="/main.232652107ceafd6b1a4b.js" defer></script></body>
 </html>
