second new 404 test ^.^

--- a/404.html
+++ b/404.html
@@ -5,9 +5,9 @@
   <title>ProductConfigurator</title>
   <base href="/generic-3Dproduct-viewer/build/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-<link rel="stylesheet" href="/styles.e6fe8d605ac6398faee7.css"></head>
+  <link rel="icon" type="image/x-icon" href="build/favicon.ico">
+<link rel="stylesheet" href="build/styles.e6fe8d605ac6398faee7.css"></head>
 <body>
   <app-root></app-root>
-<script src="/runtime.1720a40670866f12654e.js" defer></script><script src="/polyfills-es5.045f36a1b489f87726f5.js" nomodule defer></script><script src="/polyfills.4df563810b04665727df.js" defer></script><script src="/main.232652107ceafd6b1a4b.js" defer></script></body>
+<script src="build/runtime.1720a40670866f12654e.js" defer></script><script src="build/polyfills-es5.045f36a1b489f87726f5.js" nomodule defer></script><script src="build/polyfills.4df563810b04665727df.js" defer></script><script src="build/main.232652107ceafd6b1a4b.js" defer></script></body>
 </html>
