--- a/404.html
+++ b/404.html
@@ -6,8 +6,8 @@
   <base href="/generic-3Dproduct-viewer/build/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.e6fe8d605ac6398faee7.css"></head>
+  <link rel="stylesheet" href="styles.e6fe8d605ac6398faee7.css"></head>
 <body>
-  <app-root></app-root>
-<script src="runtime.1720a40670866f12654e.js" defer></script><script src="polyfills-es5.045f36a1b489f87726f5.js" nomodule defer></script><script src="polyfills.4df563810b04665727df.js" defer></script><script src="main.0a388f919088185b8177.js" defer></script></body>
+<app-root></app-root>
+<script src="runtime-es2015.681bd8a4edb177c86959.js" type="module"></script><script src="runtime-es5.681bd8a4edb177c86959.js" nomodule defer></script><script src="polyfills-es5.3ec3026f1918f9e54871.js" nomodule defer></script><script src="polyfills-es2015.c936040ed20dd796adcd.js" type="module"></script><script src="main-es2015.2ff70b46626348a34d78.js" type="module"></script><script src="main-es5.2ff70b46626348a34d78.js" nomodule defer></script></body>
 </html>
